Sat Oct 28 01:48:27 UTC 2006  Steve Huston  <shuston@riverace.com>

        * include/makeinclude/wrapper_macros.GNU: Add -L$(INSLIB) to LDFLAGS
          if it was not there already. Allows link to work when built libraries
          are moved to locations other than the default $(ACE_ROOT)/lib
          location.

Fri Oct 28 03:23:18 UTC 2006  Ossama Othman  <ossama_othman at symantec dot com>

        * apps/JAWS2/JAWS/FILE.cpp:
        * apps/JAWS2/JAWS/FILE.h:
        * apps/JAWS2/JAWS/IO.cpp:
        * apps/JAWS3/jaws3/FILE.cpp:
        * apps/JAWS3/jaws3/FILE.h:
        * examples/Threads/thread_manager.cpp:
        * examples/Threads/cancel.cpp:
        * examples/Threads/thread_specific.cpp:
        * examples/C++NPv1/Process_Per_Connection_Logging_Server.cpp:
        * performance-tests/Synch-Benchmarks/Perf_Test/Benchmark_Performance.cpp
          Addressed 64-bit conversion warnings.

Fri Oct 28 02:49:11 UTC 2006  Ossama Othman  <ossama_othman at symantec dot com>

        * examples/APG/Shared_Memory/Mem_Map.cpp:
        * examples/Mem_Map/file-reverse/file-reverse.cpp:
        * examples/Web_Crawler/Mem_Map_Stream.cpp:

          Addressed 64-bit conversion warnings.

Fri Oct 27 21:41:25 UTC 2006  Phil Mesnier  <mesnier_p@ociweb.com>

        * THANKS:
        * ace/Select_Reactor_Base.inl:
        * ace/Select_Reactor_Base.cpp:
        * ace/TP_Reactor.inl:
        * ace/TP_Reactor.cpp:
        * tests/run_test.lst:

          The fix for bug 2653. Thanks to Scott Mitchell <rsm at progress
          dot com> and Chris Reed <cr at progress dot com> for the
          considerable effort they put in helping to isolate this problem.

Fri Oct 27 21:28:36 UTC 2006  Phil Mesnier  <mesnier_p@ociweb.com>

        * tests/Bug_2653_Regression_Test.cpp:
        * tests/tests.mpc:

          Added a new regression test. Without the accompaning fix, the
          test coredump. If you comment out the call to test_for_crash,